package Entities;

public class VehicleService {
}
