package Repositorys;

public class CustomerRepository {
}
